# GompeiVision

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.ARM  Dockerfile.X86  Dockerfile.arm64  Dockerfile.x86  GompeiVisionStructureDiagram.dot  README.md  build.sh  public.key  vcpkg.json  versions.json
.devcontainer/arm/: devcontainer.json
.devcontainer/x86/: devcontainer.json
.github/workflows/: build.yml
dists/jammy/: InRelease  Release  Release.gpg
dists/jammy/main/binary-amd64/: Packages
dists/jammy/main/binary-arm64/: Packages
dists/noble/: InRelease  Release  Release.gpg
dists/noble/main/binary-amd64/: Packages
dists/noble/main/binary-arm64/: Packages
dists/numbat/: InRelease  Release  Release.gpg
dists/numbat/main/binary-amd64/: Packages
dists/numbat/main/binary-arm64/: Packages
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
dists/stable/main/binary-arm64/: Packages
models/: gamepiece_table.csv  reefscape_pose_estimation.csv
packaging/: CPackConfig.cmake
scripts/: run_update_deps_wrapper.cmake  update_deps.py
src/: CMakeLists.txt
src/cpp/: main.cpp
src/cpp/calibrator/: CalibrationSession.cpp
src/cpp/capture/: Camera.cpp
src/cpp/detector/: FiducialDetector.cpp  ObjectDetector.cpp
src/cpp/estimator/: CameraPoseEstimator.cpp  GamePiecePosEstimator.cpp  MultiTagPoseEstimator.cpp  ObjectEstimator.cpp  SingleTagPoseEstimator.cpp  TagAngleCalculator.cpp
src/cpp/io/: ConfigInterface.cpp  FieldInterface.cpp  OutputPublisher.cpp
src/cpp/ioctl/: Camera.cpp
src/cpp/networktables/: NetworkTablesInterface.cpp
src/cpp/output/: OutputPublisher.cpp
src/cpp/pipeline/: Pipeline.cpp  PipelineHelper.cpp  PipelineManager.cpp  PipelineProcess.cpp
src/cpp/util/: LogRedirect.cpp
src/include/calibrator/: CalibrationSession.h
src/include/capture/: Camera.h
src/include/detector/: FiducialDetector.h  ObjectDetector.h
src/include/estimator/: CameraPoseEstimator.h  GamePiecePosEstimator.h  MultiTagPoseEstimator.h  ObjectEstimator.h  SingleTagPoseEstimator.h  TagAngleCalculator.h
src/include/io/: ConfigInterface.h  FieldInterface.h  OutputPublisher.h
src/include/ioctl/: Camera.h
src/include/networktables/: NetworkTablesInterface.h
src/include/output/: OutputPublisher.h
src/include/pipeline/: ModelManager.h  Pipeline.h  PipelineHelper.h  PipelineManager.h  PipelineProcess.h  QueuedFrame.h  ThreadSafeQueue.h
src/include/util/: AnnotationData.h  CameraIntrinsics.h  Platform.h  PoseUtils.h  QueuedFiducialData.h  QueuedFrame.h  QueuedObjectData.h  ThreadSafeQueue.h
